# kittylang

./: Cargo.toml  NOTES.md  README.md
ast/: Cargo.toml
ast/src/: lib.rs  number.rs  validation.rs
core/: Cargo.toml
core/src/: error.rs  eval.rs  lexer.rs  lib.rs  main.rs  parser.rs  solver.rs  span.rs  value.rs
cst/: Cargo.toml
cst/src/: lib.rs
eval/: Cargo.toml
eval/src/: lib.rs
examples/: 3d-math.kitty  3d-object.kitty  assembly.kitty  chair.kitty  sample.kitty  units.kitty
hir/: Cargo.toml
hir/src/: database.rs  lib.rs
lexer/: Cargo.toml
lexer/corpus/: basic.kitty  examples.kitty
lexer/src/: indenter.rs  lib.rs  token.rs
meta/: Cargo.toml
meta/src/: lib.rs  report.rs  source.rs  span.rs
number/: Cargo.toml
number/src/: lib.rs
parse/: Cargo.toml
parse/src/: error.rs  lexer.rs  lib.rs  parser.rs  token.rs
parser/: Cargo.toml
parser/src/: error.rs  event.rs  grammar.rs  lib.rs  marker.rs  parser.rs  sink.rs  source.rs  token_set.rs
parser/src/grammar/: decl.rs  declaration.rs  expr.rs  expression.rs  function.rs  identifier.rs  mod.rs  module.rs  pattern.rs  type.rs
parser/src/parser/: marker.rs  parse_error.rs
repl/: Cargo.toml
repl/src/: main.rs
sketches/: 014.md  015.md
solve/: Cargo.toml
solve/src/: lib.rs
syntax/: Cargo.toml
syntax/src/: lib.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
value/: Cargo.toml
value/src/: lib.rs
