[workspace]
resolver = "2"
members = [
  "cst",
  "hir",
  "lexer",
  "meta",
  "number",
  "parser",
  "syntax"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

rust-version = "1.83.0"
description = ""
readme = "README.md"
homepage = "https://github.com/villagekit/kittylang"
repository = "https://github.com/villagekit/kittylang"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

[workspace.dependencies]
expect-test = "1.5.1"
indoc = "2.0.3"
internment = "0.8.6"
text-size = "1.1.1"
