[package]
name = "kitty-core"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
kitty-ast = { path = "../ast" }
kitty-hir = { path = "../hir" }
kitty-parser = { path = "../parser" }
