[package]
name = "kitty-hir"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
kitty-ast = { path = "../ast" }
kitty-syntax = { path = "../syntax" }
la-arena = "0.2.0"
smol_str = "0.1.17"

[dev-dependencies]
kitty-parser = { path = "../parser" }
