[package]
name = "kitty-lexer"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
logos = "0.15.0"
peek-again = "0.4.0"
text-size = "1.1.1"
fastnum = "0.1.13"

[dev-dependencies]
