[package]
name = "kitty-meta"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ariadne = { version = "0.5.0" }
internment = { workspace = true }
text-size = { workspace = true }
