[package]
name = "kitty-parser"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
kitty-lexer = { path = "../lexer" }
kitty-syntax = { path = "../syntax" }
drop_bomb = "0.1.5"
rowan = "0.12.1"
text-size = "1.0.0"

[dev-dependencies]
expect-test = "1.5.1"
