[package]
name = "kitty-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
kitty-syntax = { path = "../syntax" }
kitty-cst = { path = "../cst" }
