[package]
name = "kitty-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
kitty-cst = { path = "../cst" }
kitty-lexer = { path = "../lexer" }
kitty-syntax = { path = "../syntax" }
text-size = { workspace = true }
drop_bomb = "0.1.5"

[dev-dependencies]
expect-test = "1.5.1"
