[package]
name = "kitty-syntax"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
kitty-lexer = { path = "../lexer" }
num-derive = "0.3.3"
num-traits = "0.2.14"
rowan = "0.12.1"
