[package]
name = "kitty-syntax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
kitty-lexer = { path = "../lexer" }
eventree = "0.7.0"
